# IntMS_EEG

./: .gitignore  Docu Jänner.docx  RMS_force_prediction.ipynb  analysing.ipynb  analysis.ipynb  eda.ipynb  eda_ieeg.ipynb  experiments.py  experiments_kernel.py  experiments_xy.py  plot.ipynb  prediction_analysis_angle.ipynb  prediction_analysis_xy.ipynb  pyproject.toml  results_all_metrics.csv  test_single.py  training.py  utils.py  ~$cu Jänner.docx
Legacy/: analysis.ipynb  eda.ipynb  predictions_numpy.ipynb  training.py
angle_experiments/: eda.ipynb  experiments_xy.py
samples/: P1_180Deg_F1_1_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P1_180Deg_F1_1_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial2.mat  P1_180Deg_F1_2_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P1_180Deg_F1_2_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial2.mat  P1_90Deg_F1_1_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P1_90Deg_F1_1_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial2.mat  P1_90Deg_F2_2_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P1_90Deg_F2_2_plateau_iAll_MUedit.mat_decomp_100It_FDI_DEMUSEEDIT_cut_C_trial2.mat  P3_180Deg_F1_2_plateau_iAll_MUedit.mat_decomp_70It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P3_180Deg_F1_2_plateau_iAll_MUedit.mat_decomp_70It_FDI_DEMUSEEDIT_cut_C_trial2.mat  P3_90Deg_F1_1_plateau_iAll_MUedit.mat_decomp_70It_FDI_DEMUSEEDIT_cut_C_trial1.mat  P3_90Deg_F1_1_plateau_iAll_MUedit.mat_decomp_70It_FDI_DEMUSEEDIT_cut_C_trial2.mat
(+28 files in other folders)
