[tool.poetry]
name = "fd-intraeeg"
version = "0.1.0"
description = ""
authors = ["Jihagen <j.i.hagen@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.4.3"
ipykernel = "^6.29.5"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
h5py = "^3.14.0"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
